# app/Models/Actor.php
@@ -1,0 +1,20 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\SoftDeletes;
+
+class Actor extends Model
+{
+    use SoftDeletes;
+    protected $table = 'actor';
+    protected $fillable = [
+        'fullname',
+        'avatar',
+        'slug'
+    ];
+    protected $hidden = [
+        'deleted_at'
+    ];
+}
